fixed center alignment

--- a/src/scss/skills.scss
+++ b/src/scss/skills.scss
@@ -9,6 +9,8 @@ SAND = #E8E4E0
 
 
 .skills-container {
+  width: 70%;
+  margin-left: 15%;
   text-align: center;
   h1 {
       text-align: center;
@@ -23,6 +25,13 @@ SAND = #E8E4E0
         .button {
           border-radius: 5%;
         }
+      }
+      .card {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        background-color: brown;
+
       }
   }
 }
